Add opacity to radar overlay

--- a/inc/style.css
+++ b/inc/style.css
@@ -145,6 +145,11 @@ BODY {
   float: left;
 }
 
+#radar DIV IMG,
+#radar2 DIV IMG {
+  opacity: 0.75;
+}
+
 .fc-day {
   width: 20%;
   float: left;
