--- a/inc/style.css
+++ b/inc/style.css
@@ -46,12 +46,12 @@ BODY {
 }
 
 #hour-min {
-  font-size: 18.5vw;
+  font-size: 17.5vw;
   line-height: 1em;
 }
 
 #sec-ap {
-  font-size: 8vw;
+  font-size: 7vw;
   line-height: 1em;
 }
 
@@ -68,7 +68,7 @@ BODY {
 #current {
   /*width: 34.147vw;*/ /* width: 350px; */
   text-align: center;
-  padding: 0.5vw 0 0;
+  /*padding: 0.1vw 0 0;*/
   position: relative;
 }
 
@@ -80,21 +80,21 @@ BODY {
 }
 
 #current .temp {
-  font-size: 4.2vw; /* font-size: 32px; */
+  font-size: 8.2vw; /* font-size: 32px; */
   font-weight: bold;
-  padding: 2.2vw 0 1.5vw; /* padding: 0.15em 0 0.5em; */
+  padding: 3.5vw 0 0; /* padding: 0.15em 0 0.5em; */
 }
 
 #wind {
   border: 4px solid #818282;
   border-radius: 50%;
-  width: 8.2vw; /* width: 55px; */
-  height: 8.2vw; /* height: 55px; */
-  line-height: 8.2vw; /* line-height: 55px; */
+  width: 7vw; /* width: 55px; */
+  height: 7vw; /* height: 55px; */
+  line-height: 7vw; /* line-height: 55px; */
   text-align: center;
   font-weight: bold;
-  font-size: 3.5vw;
-  margin: 1.5vw auto; /*margin: 11px auto;*/
+  font-size: 4.2vw;
+  margin: 1.5vw auto 1vw; /*margin: 11px auto;*/
   position: relative;
 }
 
@@ -121,7 +121,7 @@ BODY {
 }
 
 #dew {
-  padding-top: 1vw;
+  padding-top: 2.2vw;
 }
 
 .lastup {
